--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="btn">
-		<button>submit</button>
+	<div class="btn" id="btn">
+		<button >submit</button>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
