--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="btn" id="btn">
-		<button >submit</button>
+		<button type="submit">submit</button>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
