--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="btn" id="btn">
+	<div id="btn">
 		<button type="submit">submit</button>
 	</div>
     <script type="text/javascript" src="./script.js">
