--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="btn">
-		<button type="submit">submit</button>
-	</div>
+	
+		<button id="btn" type="submit">submit</button>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
